java revision array String Datatypes Loop

--- a/Project/WebsiteTraveling/css/style.css
+++ b/Project/WebsiteTraveling/css/style.css
@@ -642,7 +642,7 @@ p{
 
 /* **************************media Quories***************************** */
 
-
+/*
 @media{
 
     html{
@@ -657,4 +657,4 @@ p{
         width:100%;
         text-align:center;    
     }
-}
+}*/
